--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -4,7 +4,7 @@
   "license": "AGPL-3.0-or-later",
   "scripts": {
     "dev": "concurrently --kill-others \"pnpm prisma:generate && next dev --turbopack --port 8888\" \"pnpm prisma:generate && pnpm prisma:studio --browser none\"",
-    "build": "pnpm prisma:generate && next build",
+    "build": "pnpm prisma:generate && NODE_OPTIONS='--max-old-space-size=8192' next build",
     "lint": "next lint",
     "start": "next start",
     "script": "tsx ./scripts/run.ts",
