--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
       "@tiptap/extension-file-handler": "3.10.2",
       "@tiptap/extensions": "3.10.2",
       "@tiptap/markdown": "3.10.2",
-      "@tiptap/suggestion": "3.10.2"
+      "@tiptap/suggestion": "3.10.2",
+      "zod": "3.23.8"
     }
   },
   "packageManager": "pnpm@8.6.10"
