--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
       "@tiptap/extensions": "3.10.2",
       "@tiptap/markdown": "3.10.2",
       "@tiptap/suggestion": "3.10.2",
-      "zod": "3.23.8"
+      "zod": "3.23.8",
+      "zod-to-json-schema": "3.23.0"
     }
   },
   "packageManager": "pnpm@8.6.10"
